# IntoPrep_Dashboard

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml
docs/: release-and-migrations.md
docs/onboarding/: admin-onboarding.tex  engineer-onboarding.tex  instructor-onboarding.tex  staff-onboarding.tex  ta-onboarding.tex
public/: intake-import-template.csv  quickbooks-import-template.csv  sw.js
scripts/: prepare-desktop-config.mjs
src/: proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
src/components/: desktop-update-button.tsx  install-app-button.tsx  pwa-register.tsx
src/lib/: account-governance.ts  admin-operations.ts  attendance.ts  auth.ts  billing-sync.ts  desktop-shell.ts  domain.ts  engineer-controls.ts  instructor-fallbacks.ts  instructor-operations.ts  intake-import-shared.ts  intake-import.ts  intake-sync-shared.ts  intake-sync.ts  live-attendance.ts  live-portal.ts  live-writes.ts  mock-data.ts  permissions.ts  portal.ts  staff-operations.ts  sync-jobs.ts  ta-operations.ts  url.ts
src/test/: attendance.test.ts  intake-import.test.ts  intake-sync.test.ts  portal.test.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260314221500_portal_auth_and_attendance.sql  20260314224500_academics_live_tables.sql  20260314231500_billing_and_messaging_live_tables.sql  20260314234500_pipeline_and_integrations_live_tables.sql  (+15 more)
(+112 files in other folders)
