[package]
name = "intoprep_desktop"
version = "0.1.0"
description = "Desktop wrapper for the IntoPrep Admin Portal"
authors = ["IntoPrep"]
license = "UNLICENSED"
repository = "https://github.com/Ostailor/IntoPrep_Dashboard"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "intoprep_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
